k8s/base/task-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: tms-app
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
